@@ -98,7 +98,7 @@ STRequests.Cls.addSuperClsRequest = "addSuperCls";
 STRequests.Cls.removeSuperClsRequest = "removeSuperCls";
 STRequests.Cls.getClassTreeRequest = "getClassTree";
 STRequests.Cls.getClassDescriptionRequest = "getClsDescription";
-STRequests.Cls.getInstanceListRequest = "getInstanceList";
+STRequests.Cls.getClassAndInstancesInfoRequest = "getClassAndInstancesInfo";
 STRequests.Cls.createInstanceRequest = "createInstance";
 STRequests.Cls.createClassRequest = "createClass";
 STRequests.Cls.getSubClassesRequest = "getSubClasses";
